# Avinor-Predictions

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: eda_weather.ipynb
src/flight_concurrency_predictor/: __init__.py  data_preprocessing.py  evaluate.py  model.py  train.py
