[project]
name = "Avinor_Predictions"
version = "0.1.0"
description = "Developing a model that shows the probability of simultaneous active dialogue for flights based on Avinor's data from their data competition."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "numpy",
    "requests",
    "scikit-learn",
    "xgboost",
    "python-dotenv"

]
